<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.dkgoody.dtimer.DTimerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SettingsFragment">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:text="Minutes         Seconds"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/min_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <NumberPicker
            android:id="@+id/min_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delim"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text=":"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sec_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/min_picker"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/sec_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delim"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cycleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Break"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/instruction_field"
            android:text="@string/start"
            android:theme="@style/AppTheme.InstructionText"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            tools:layout_editor_absoluteX="1dp" />

        <TextView
            android:id="@+id/backSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/back_arrow"
            android:textColor="?attr/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/divider_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cycleTitle" />

        <TextView
            android:id="@+id/forwardSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/forward_arrow"
            android:textColor="?attr/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/divider_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cycleTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

